Changed back dropdown button position to fixed and added z-index to keep above other buttons

--- a/src/css/Dropdown.css
+++ b/src/css/Dropdown.css
@@ -11,7 +11,8 @@
   margin-left: 15px;
   box-sizing: border-box;
   top: 15px;
-  position: absolute;
+  position: fixed;
+  z-index: 200;
 }
 
 .toggle-list:focus {
